--- a/.github/workflows/auto-merge.yml
+++ b/.github/workflows/auto-merge.yml
@@ -24,7 +24,7 @@ jobs:
         run: |
           git fetch origin main
           git checkout main
-          git merge ${GITHUB_REF#refs/heads/}
+          git merge ${GITHUB_REF#refs/heads/} --allow-unrelated-histories
           git push origin main
           
 
