--- a/.github/workflows/auto-merge.yml
+++ b/.github/workflows/auto-merge.yml
@@ -1,9 +1,5 @@
 name: Auto merge into main
 
-permissions:
-  contents: write
-  pull-requests: write
-
 on:
   push:
     branches:
@@ -18,18 +14,18 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Set up git
+        run: |
+          git config --global user.name "github-actions"
+          git config --global user.email "github-actions@github.com"
+
       - name: Merge into main
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           git fetch origin main
           git checkout main
-          git merge ${{ github.ref_name }} --allow-unrelated-histories
-          git push origin main
-          git fetch origin main
-          git checkout main
           git merge ${GITHUB_REF#refs/heads/} --allow-unrelated-histories
-          git push origin main
+          git push https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }} main
           
 
   
